--- a/app/index.html
+++ b/app/index.html
@@ -1,31 +1,27 @@
 <html>
 
-
-
 <head>
     <title>Welcome to the Paris Theater</title>
 </head>
 
 <body ng-app="TheaterShoppingCart">
-    <div ng-controller="ShoppingCart">
-        <h3>Select your snacks:</h3>
 
-        <div ng-repeat="model in snackList">
-            <label ng-bind="model.name"></label>
-            <input type="number" min="0" ng-model="model.quantity" ng-change="updateTotalCost()" />
-        </div>
-        <title>Welcome to the Paris Theater</title>
-        <p>
-            {{snackList}}
-        </p>
+    <a href="#!/">Home</a>
+    <a href="#!shoppingcart">Buy Snacks</a>
+    <a href="#!admin">Add Snacks</a>
 
-        <p>
-            <label>Total Cost: {{totalCost}}</label>
+    <!-- MAIN CONTENT AND INJECTED VIEWS -->
+    <div id="main">
 
-        </p>
+        <!-- angular templating -->
+        <!-- this is where content will be injected -->
+        <div ng-view></div>
+
     </div>
 
+
     <script src="../node_modules/angular/angular.js"></script>
+    <script src="../node_modules/angular-route/angular-route.js"></script>
     <script src="app.js"></script>
     <script src="controllers/shoppingCartCtl.js"></script>
     <script src="factories/snackFactory.js"></script>
