Adding unit test scaffolding for new controller

--- a/app/index.html
+++ b/app/index.html
@@ -11,11 +11,12 @@
     <a href="#!admin">Add Snacks</a>
 
     <div ng-view></div>
-    
+
     <script src="../node_modules/angular/angular.js"></script>
     <script src="../node_modules/angular-route/angular-route.js"></script>
     <script src="app.js"></script>
     <script src="controllers/ShoppingCartCtl.js"></script>
+    <script src="controllers/ShoppingCartAdminCtl.js"></script>
     <script src="factories/snackFactory.js"></script>
 
 </body>
